--- a/CustomizedHouse/src/main/resources/templates/sign/signUpGenericInfo.html
+++ b/CustomizedHouse/src/main/resources/templates/sign/signUpGenericInfo.html
@@ -41,7 +41,7 @@
 </style>
 
 <section id="signUpGenericInfo" class="about roomy-100" layout:fragment="content">
-	<form action="/sign/signUpGenericUser" method="post">
+	<form th:action="@{/sign/signUpGenericUser}" method="post" th:id="signUpGenericInfoForm">
 		<div class="container">
 			<div class="about_content">
 				<div class="row">
@@ -78,10 +78,10 @@
 							<div class="form-group">
 								<label>주민등록번호 &nbsp;&nbsp;&nbsp;&nbsp;<span id="tdId"></span></label>
 								<div class="row">&nbsp;&nbsp;&nbsp;&nbsp;
-									<input type="text" class="form-control" name="frontResNum" id="frontResNum"
+									<input type="text" class="form-control" name="birth" id="birth"
 										   required="required" style="width:41%;">
                                     &nbsp;&nbsp;&nbsp;&nbsp;-
-                                    <input type="password" class="form-control" name="backResNum" id="backResNum"  required="required" style="width:41%;">
+                                    <input type="password" class="form-control" name="resNum" id="resNum"  required="required" style="width:41%;">
 								</div>
 							</div>
 							<div class="form-group">
@@ -90,6 +90,11 @@
 									   id="userPhoneNum" required="required" placeholder="010-0000-0000">
 								<div id="phone_check"></div>
 							</div>
+                            <div class="form-group">
+                                <label>이메일 &nbsp;&nbsp;&nbsp;&nbsp;<span id="tdEmail"></span></label>
+                                <input type="text" class="form-control" name="userEmail"
+                                       id="userEmail" required="required">
+                            </div>
 							<div class="form-group">
 								<label>주소 &nbsp;&nbsp;&nbsp;&nbsp;<span id="tdCh"></span></label>
 								<div class="row">&nbsp;&nbsp;&nbsp;&nbsp;
@@ -107,7 +112,7 @@
 							<div class="form-group">
 								<div class="row">
 									<div class="col-sm-6">
-										<button type="submit" id="signUp"
+										<button id="signUp" type="button"
 												class="btn btn-primary btn-block btn-lg" >Sign Up</button>
 									</div>
 									<div class="col-sm-6">
@@ -139,44 +144,56 @@
 	<script src="https://t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
 	<script src="//dapi.kakao.com/v2/maps/sdk.js?appkey=0d0c0a21e3bf46994d7f7a41d9cc729f&libraries=services"></script>
 	<script>
-		$(function() {
-	// 아이디 유효성 검사(1 = 중복 / 0 != 중복)
-			$("#userId").blur(function() {
-				// id = "id_reg" / name = "userId"
-				var userId = $('#userId').val();
-				var idReg = /^[a-zA-Z0-9]{4,12}$/;
-				$.ajax({
-					url : '../JoinIdCheck?userId='+ userId,
-					type : 'get',
-					success : function(data) {
-						console.log("1 = 중복o / 0 = 중복x : "+ data);
-
-						if (data == 1) {
-							// 1 : 아이디가 중복되는 문구
-							$("#id_check").text("사용중인 아이디입니다.");
-							$("#id_check").css("color", "#ff6863");
-							$("#signUp").attr("disabled", true);
-						} else {
-							if(!idReg.test(userId)){
-								// 0 : 아이디 길이 / 문자열 검사
-								$('#id_check').text("아이디는 소문자와 숫자 4~12자리만 가능합니다.");
-								$('#id_check').css('color', '#ff6863');
-								$("#signUp").attr("disabled", true);
-							} else if(userId == ""){
-								$('#id_check').text('아이디를 입력해주세요.');
-								$('#id_check').css('color', '#ff6863');
-								$("#signUp").attr("disabled", true);
-							} else{
-								$('#id_check').text('사용가능한 아이디입니다.');
-								$('#id_check').css('color', '#669999');
-								$("#signUp").attr("disabled", false);
-							}
-						}
-					}, error : function() {
-						console.log("실패");
-					}
-				});
+		$("#signUp").click(function () {
+			$.ajax({
+				url : '/sign/signUpGenericUser',
+				type : 'post',
+				success : function(data) {
+					console.log(data);
+				}, error : function() {
+					console.log("실패");
+				}
 			});
+		});
+
+		$(function() {
+	// // 아이디 유효성 검사(1 = 중복 / 0 != 중복)
+	// 		$("#userId").blur(function() {
+	// 			// id = "id_reg" / name = "userId"
+	// 			var userId = $('#userId').val();
+	// 			var idReg = /^[a-zA-Z0-9]{4,12}$/;
+	// 			$.ajax({
+	// 				url : '../JoinIdCheck?userId='+ userId,
+	// 				type : 'get',
+	// 				success : function(data) {
+	// 					console.log("1 = 중복o / 0 = 중복x : "+ data);
+	//
+	// 					if (data == 1) {
+	// 						// 1 : 아이디가 중복되는 문구
+	// 						$("#id_check").text("사용중인 아이디입니다.");
+	// 						$("#id_check").css("color", "#ff6863");
+	// 						$("#signUp").attr("disabled", true);
+	// 					} else {
+	// 						if(!idReg.test(userId)){
+	// 							// 0 : 아이디 길이 / 문자열 검사
+	// 							$('#id_check').text("아이디는 소문자와 숫자 4~12자리만 가능합니다.");
+	// 							$('#id_check').css('color', '#ff6863');
+	// 							$("#signUp").attr("disabled", true);
+	// 						} else if(userId == ""){
+	// 							$('#id_check').text('아이디를 입력해주세요.');
+	// 							$('#id_check').css('color', '#ff6863');
+	// 							$("#signUp").attr("disabled", true);
+	// 						} else{
+	// 							$('#id_check').text('사용가능한 아이디입니다.');
+	// 							$('#id_check').css('color', '#669999');
+	// 							$("#signUp").attr("disabled", false);
+	// 						}
+	// 					}
+	// 				}, error : function() {
+	// 					console.log("실패");
+	// 				}
+	// 			});
+	// 		});
 
 			let idReg = /^[a-z]{1}[a-z0-9]{2,15}$/; //3~16자리의 영문+숫자 조합의 id 정규표현식
 			let passReg =/^.*(?=.{6,20})(?=.*[0-9])(?=.*[a-zA-Z]).*$/;//영문, 숫자 혼합하여 6~20자리 이내
@@ -186,41 +203,41 @@
 
 
 
-			$('#userPwd').blur(function() {
-				console.log("유효성 체크");
-				if (!passReg.test($('#userPwd').val())) {
-					$('#pwd_check').text("3~16자리의 문자와 숫자 형태의 패스워드를 입력해주세요.");
-					$("#pwd_check").css("color", "#ff6863");
-					$("#signUp").attr("disabled", true);
-				} else {
-					$('#pwd_check').text("동일한 패스워드를 한 번 더 입력해주세요.");
-					$("#pwd_check").css("color", "#669999");
-					$('#pwdCheck').blur(function() {
-						if ($('#userPwd').val() != $('#pwdCheck').val()) {
-							$('#pwd_pwd_check').text("암호가 일치하지 않습니다.");
-							$("#pwd_pwd_check").css("color", "#ff6863");
-							$("#signUp").attr("disabled", true);
-						} else {
-							$('#pwd_pwd_check').text("암호가 일치합니다.");
-							$("#pwd_pwd_check").css("color", "#669999");
-							$("#signUp").attr("disabled", false);
-						}
-					});
-				}
-			});
-
-			$('#userPhoneNum').blur(function(){
-				if(!phoneReg.test($('#userPhoneNum').val())){ //정규표현식에 맞으면
-					$('#phone_check').text("핸드폰 번호 형식에 맞지 않습니다.");
-					$("#phone_check").css("color", "#ff6863");
-					$("#signUp").attr("disabled", true);
-				}else{
-					$('#phone_check').text("");
-					$("#signUp").attr("disabled", false);
-				}
-
-			});
-
+		// 	$('#userPwd').blur(function() {
+		// 		console.log("유효성 체크");
+		// 		if (!passReg.test($('#userPwd').val())) {
+		// 			$('#pwd_check').text("3~16자리의 문자와 숫자 형태의 패스워드를 입력해주세요.");
+		// 			$("#pwd_check").css("color", "#ff6863");
+		// 			$("#signUp").attr("disabled", true);
+		// 		} else {
+		// 			$('#pwd_check').text("동일한 패스워드를 한 번 더 입력해주세요.");
+		// 			$("#pwd_check").css("color", "#669999");
+		// 			$('#pwdCheck').blur(function() {
+		// 				if ($('#userPwd').val() != $('#pwdCheck').val()) {
+		// 					$('#pwd_pwd_check').text("암호가 일치하지 않습니다.");
+		// 					$("#pwd_pwd_check").css("color", "#ff6863");
+		// 					$("#signUp").attr("disabled", true);
+		// 				} else {
+		// 					$('#pwd_pwd_check').text("암호가 일치합니다.");
+		// 					$("#pwd_pwd_check").css("color", "#669999");
+		// 					$("#signUp").attr("disabled", false);
+		// 				}
+		// 			});
+		// 		}
+		// 	});
+		//
+		// 	$('#userPhoneNum').blur(function(){
+		// 		if(!phoneReg.test($('#userPhoneNum').val())){ //정규표현식에 맞으면
+		// 			$('#phone_check').text("핸드폰 번호 형식에 맞지 않습니다.");
+		// 			$("#phone_check").css("color", "#ff6863");
+		// 			$("#signUp").attr("disabled", true);
+		// 		}else{
+		// 			$('#phone_check').text("");
+		// 			$("#signUp").attr("disabled", false);
+		// 		}
+		//
+		// 	});
+		//
 		});
 
 		//맵
